--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Mimicking the battle ship board game and exercising some TDD practice.",
   "main": "./src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -24,8 +23,10 @@
     "eslint": "^8.24.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "eslint-plugin-import": "^2.26.0"
+  },
+  "dependencies": {
+    "jest": "^29.1.1"
+  }
   }
 }
