--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Mimicking the battle ship board game and exercising some TDD practice.",
   "main": "./src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -26,7 +26,7 @@
     "eslint-plugin-import": "^2.26.0"
   },
   "dependencies": {
+    "eslint-plugin-jest": "^27.0.4",
     "jest": "^29.1.1"
-  }
   }
 }
